Fixed contact image on small screens

--- a/index.html
+++ b/index.html
@@ -188,11 +188,16 @@
             </div>
             <!-- contact page -->
             <div id="contact" class="w-full min-h-screen px-8 pb-8 pt-24 flex flex-col">
-                <div class="flex flex-col justify-center items-center text-white flex-grow text-center relative">
+                <div class="flex flex-col justify-center items-center text-white flex-grow text-center">
                     <h1 class="text-3xl md:text-6xl mb-5">Kontakt</h1>
-                    <img class="p-5 max-w-sm block" src="img/mail.svg" alt="Kontakt Illustration" >
-                    <p><a class="text-xl" href="mailto:adrian_fiedler@msn.com">adrian_fiedler (at) msn.com</a></p>
-                    <p class="absolute bottom-0">&copy;<span id="currYear"></span> Adrian Fiedler</p>
+                    <img class="p-5 max-w-sm block w-3/4 md:w-full" src="img/mail.svg" alt="Kontakt Illustration" >
+                    <p class="flex mb-5 ">
+                        <svg class="inline w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
+                        </svg>
+                        <a class="ml-1 text-xl" href="mailto:adrian_fiedler@msn.com">adrian_fiedler (at) msn.com</a>
+                    </p>
+                    <p class="">&copy;<span id="currYear"></span> Adrian Fiedler</p>
                 </div>
             </div>
         </div>
