--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
                     <img class="p-5 max-w-sm block w-3/4 md:w-full" src="img/mail.svg" alt="Kontakt Illustration" >
                     <p class="flex mb-5 ">
                         <svg class="inline w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <title>Mail Icon</title>
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z" />
                         </svg>
                         <a class="ml-1 text-xl" href="mailto:adrian_fiedler@msn.com">adrian_fiedler (at) msn.com</a>
