--- a/index.html
+++ b/index.html
@@ -75,7 +75,41 @@
                     <h1 class="text-3xl md:text-6xl mb-5">Projekte</h1>
                         <ul class="m-auto text-left">
                             <li>
-                                <p class="text-center">Juni 2018 bis heute</p>
+                              <p class="text-center">Januar 2023 bis Dezember 2023</p>
+                              <div class="flex flex-col md:flex-row mb-8 p-8 rounded shadow-lg bg-white text-black">
+                                  <div class="text-center m-auto flex-grow-0 flex-shrink-0">
+                                      <img class="p-5" width="300px" src="img/connected_world.svg" alt="Projekt Illustration" >
+                                  </div>
+                                  <div class="">
+                                      <div class="pb-3">
+                                          <h2 class="text-xl font-bold text-gray-700">Senior Java Entwickler</h2>
+                                          <h4 class="text-base">Freiberuflich</h4>
+                                      </div>
+                                      <p class="pb-2">Ich war als Senior Java Entwickler Teil eines Scrum Teams innerhalb eines Projekts im Bereich des XRAIL-Güterverkehrs.</p>
+                                      <p>Schwerpunkte:</p>
+                                      <ul class="pb-2">
+                                          <li>- Java Backend (JEE, EJB, JPA + Hibernate, JBoss EAP, REST)</li>
+                                          <li>- Camunda Prozesse (Camunda Platform 7)</li>
+                                          <li>- Testautomatisierung (Arquillian, Cucumber, JUnit)</li>
+                                      </ul>
+                                      <p>Weitere eingesetzte Technologien:</p>
+                                      <ul class="pb-2">
+                                          <li>- Docker</li>
+                                          <li>- JBoss EAP 7.4</li>
+                                          <li>- ActiveMQ / JMS</li>
+                                          <li>- Prometheus</li>
+                                          <li>- Grafana / Graylog</li>
+                                          <li>- SonarQube</li>
+                                          <li>- Amazon S3</li>
+                                          <li>- Oracle 10g / H2</li>
+                                          <li>- JavaScript</li>
+                                          <li>- Gitlab Enterprise CI/CD</li>
+                                      </ul>
+                                  </div>
+                              </div>
+                            </li>
+                            <li>
+                                <p class="text-center">Juni 2018 bis Dezember 2022</p>
                                 <div class="flex flex-col md:flex-row mb-8 p-8 rounded shadow-lg bg-white text-black">
                                     <div class="text-center m-auto flex-grow-0 flex-shrink-0">
                                         <img class="p-5" width="300px" src="img/online.svg" alt="Projekt Illustration" >
@@ -85,7 +119,7 @@
                                             <h2 class="text-xl font-bold text-gray-700">Fullstack Java Entwickler</h2>
                                             <h4 class="text-base">Festanstellung</h4>
                                         </div>
-                                        <p class="pb-2">Ich bin als Fullstack Entwickler Teil eines Scrum Teams innerhalb eines sehr großen Projekts (> 300 Personen) des größten deutschen Telekommunikations-Anbieters im Bereich des Glasfaserausbaus.</p>
+                                        <p class="pb-2">Ich war als Fullstack Entwickler Teil eines Scrum Teams innerhalb eines sehr großen Projekts (> 300 Personen) des größten deutschen Telekommunikations-Anbieters im Bereich des Glasfaserausbaus.</p>
                                         <p>Schwerpunkte:</p>
                                         <ul class="pb-2">
                                             <li>- Java Backend (JEE, EJB, Hibernate, REST)</li>
